2009-03-11  Hironori Bono  <hbono@chromium.org>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=15790
        Ligatures aren't accounted for when manipulating VisiblePositions

        Changed cursorMovementIterator rules to prevent a cursor from moving in the middle of an
        Indic ligature which uses a virama sign.

        Test: editing/deleting/skip-virama-001.html

        * platform/text/TextBreakIteratorICU.cpp:
        (WebCore::cursorMovementIterator):



Canonical link: https://commits.webkit.org/33650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41588 268f45cc-cd09-0410-ab3c-d52691b4dbfc